--- a/css/addons/unraid/login-page/retro-terminal/custom.css
+++ b/css/addons/unraid/login-page/retro-terminal/custom.css
@@ -10,7 +10,7 @@
 --body-before:#70d7f61a;
 --body-after: #70d7f633;
 --body-animation: flicker;
---logo: url(/css/addons/unraid/login-page/alien/logo/andromeda-logo.png) center no-repeat;
+--logo: url(https://i.imgur.com/x2SyxyR.png) center no-repeat;
 --text-color: #ffffff;
 --input-color: #ffffff;
 --link-color: #ffffff;
