--- a/css/base/unraid/unraid-base.css
+++ b/css/base/unraid/unraid-base.css
@@ -10,7 +10,7 @@
 /*		   		        Made by @gilbN					 */
 /* 			      https://github.com/gilbN/theme.park			 */
 
-@import url("/https://raw.githubusercontent.com/coltography/theme.park/master/css/defaults/placeholders.css");
+@import url("https://raw.githubusercontent.com/coltography/theme.park/master/css/defaults/placeholders.css");
 @import url("https://raw.githubusercontent.com/coltography/theme.park/master/css/defaults/transparent.css");
 
 * {
